--- a/index.html
+++ b/index.html
@@ -56,10 +56,7 @@
     <div id="root">
         <div class="App">
             <header class="App-header">
-                <img src="https://main.qcloudimg.com/raw/2f3b21706c37e8685efe5c60b26ceb24.png" class="App-logo" alt="logo">
-                <p>Welcome to Webify！</p>
-                <a class="App-link" href="https://webify.cloudbase.net/"
-                    target="_blank" rel="noopener noreferrer">webify.cloudbase.net</a>
+                <p>Hello, world...</p>
             </header>
         </div>
     </div>
