--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#000000">
     <meta name="description" content="Web site created using CloudBase Webify">
-    <title>Hello Webify！</title>
+    <title>Hello</title>
     <style>
         body {
             margin: 0;
